@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2013-2024 Federico Iosue (federico@iosue.it)
+ * Copyright (C) 2013-2025 Federico Iosue (developer@omninotes.app)
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -30,8 +30,8 @@ import static it.feio.android.omninotes.utils.ConstantsBase.PREF_SNOOZE_DEFAULT;
 import static java.util.Arrays.asList;
 import static java.util.Collections.emptyList;
 import static java.util.Collections.reverse;
+import static java.util.stream.Collectors.toList;
 
-import android.Manifest;
 import android.Manifest.permission;
 import android.annotation.TargetApi;
 import android.app.Activity;
@@ -68,13 +68,10 @@ import it.feio.android.omninotes.helpers.ChangelogHelper;
 import it.feio.android.omninotes.helpers.LanguageHelper;
 import it.feio.android.omninotes.helpers.LogDelegate;
 import it.feio.android.omninotes.helpers.PermissionsHelper;
-import it.feio.android.omninotes.helpers.SpringImportHelper;
 import it.feio.android.omninotes.helpers.notifications.NotificationsHelper;
 import it.feio.android.omninotes.intro.IntroActivity;
 import it.feio.android.omninotes.models.ONStyle;
 import it.feio.android.omninotes.models.PasswordValidator.Result;
-import it.feio.android.omninotes.utils.FileHelper;
-import it.feio.android.omninotes.utils.IntentChecker;
 import it.feio.android.omninotes.utils.PasswordHelper;
 import it.feio.android.omninotes.utils.ResourcesUtils;
 import it.feio.android.omninotes.utils.StorageHelper;
@@ -85,12 +82,10 @@ import java.util.Calendar;
 import java.util.List;
 import org.apache.commons.lang3.ArrayUtils;
 import org.apache.commons.lang3.StringUtils;
-import rx.Observable;
 
 
 public class SettingsFragment extends PreferenceFragmentCompat {
 
-  private static final int SPRINGPAD_IMPORT = 0;
   private static final int RINGTONE_REQUEST_CODE = 100;
   private static final int ACCESS_DATA_FOR_EXPORT = 200;
   private static final int ACCESS_DATA_FOR_IMPORT = 210;
@@ -245,23 +240,6 @@ public class SettingsFragment extends PreferenceFragmentCompat {
 //				return false;
 //			});
 //		}
-
-    Preference importFromSpringpad = findPreference("settings_import_from_springpad");
-    if (importFromSpringpad != null) {
-      importFromSpringpad.setOnPreferenceClickListener(arg0 -> {
-        Intent intent;
-        intent = new Intent(Intent.ACTION_GET_CONTENT);
-        intent.addCategory(Intent.CATEGORY_OPENABLE);
-        intent.setType("application/zip");
-        if (!IntentChecker.isAvailable(getActivity(), intent, null)) {
-          Toast.makeText(getActivity(), R.string.feature_not_available_on_this_device,
-              Toast.LENGTH_SHORT).show();
-          return false;
-        }
-        startActivityForResult(intent, SPRINGPAD_IMPORT);
-        return false;
-      });
-    }
 
 //		Preference syncWithDrive = findPreference("settings_backup_drive");
 //		importFromSpringpad.setOnPreferenceClickListener(new OnPreferenceClickListener() {
@@ -525,7 +503,7 @@ public class SettingsFragment extends PreferenceFragmentCompat {
       enableFileLogging.setOnPreferenceChangeListener((preference, newValue) -> {
         if ((Boolean) newValue) {
           PermissionsHelper
-              .requestPermission(getActivity(), permission.WRITE_EXTERNAL_STORAGE, R
+              .requestPermission(this, permission.WRITE_EXTERNAL_STORAGE, R
                       .string.permission_external_storage,
                   getActivity().findViewById(R.id.crouton_handle),
                   () -> enableFileLogging.setChecked(true));
@@ -578,8 +556,8 @@ public class SettingsFragment extends PreferenceFragmentCompat {
   private void importNotes(DocumentFileCompat documentFile) {
     String[] backupsArray;
     if (documentFile != null) {
-      backupsArray = Observable.from(documentFile.listFiles()).map(DocumentFileCompat::getName).toList()
-          .toBlocking().single().toArray(new String[0]);
+      backupsArray = documentFile.listFiles().stream().map(DocumentFileCompat::getName)
+          .collect(toList()).toArray(new String[0]);
     } else {
       backupsArray = StorageHelper.getOrCreateExternalStoragePublicDir().list();
     }
@@ -694,16 +672,6 @@ public class SettingsFragment extends PreferenceFragmentCompat {
   public void onActivityResult(int requestCode, int resultCode, Intent intent) {
     if (resultCode == Activity.RESULT_OK) {
       switch (requestCode) {
-        case SPRINGPAD_IMPORT:
-          Uri filesUri = intent.getData();
-          String path = FileHelper.getPath(getActivity(), filesUri);
-          // An IntentService will be launched to accomplish the import task
-          Intent service = new Intent(getActivity(), DataBackupIntentService.class);
-          service.setAction(SpringImportHelper.ACTION_DATA_IMPORT_SPRINGPAD);
-          service.putExtra(SpringImportHelper.EXTRA_SPRINGPAD_BACKUP, path);
-          getActivity().startService(service);
-          break;
-
         case RINGTONE_REQUEST_CODE:
           Uri uri = intent.getParcelableExtra(RingtoneManager.EXTRA_RINGTONE_PICKED_URI);
           String notificationSound = uri == null ? null : uri.toString();
